--- a/Django/projeto_hotel/templates/lazerbemestar.html
+++ b/Django/projeto_hotel/templates/lazerbemestar.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="container">
+<body>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -40,7 +40,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
+                <a class="nav-link" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
               </li>
             </ul>
             <form class="d-flex" role="procurar">
@@ -49,66 +49,93 @@
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
 
-      <section id="lazer-e-bem-estar">
-        <h2>Lazer e Bem-Estar</h2>
-        
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Piscinas</h3>
 
-            <p>Relaxe e aproveite nossas piscina climatizadas, com vista panorâmica para o mar!</p>
-            <p>3 piscinas incrivéis para você e sua família relaxar</p>
 
-            <img src="https://th.bing.com/th/id/OIP.RcnPinSVv70N5Oyc7VNLRgHaFj?w=237&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
+    <div class="container text-center">
 
-            <img src="https://lh3.googleusercontent.com/proxy/tfT-xW6iLS10hzz32ncBuIpjK7IYoxuUTfdQIHlx71pn4LV1k_kPh6heUpp7D9lPcmo5XUBS-ALniCx9HutxHycMX9m2FtcBndRLMXccBO6pguh0FoYlgMlnKk3i9iMDHgc3helOUmKmju6JwHJf2Y7d6F3LsA=w253-h172-k-no" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
-            
-            <img src="https://www.meubalneariocamboriu.com.br/wp-content/uploads/2019/03/piscina-fazzenda-4.jpe" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
-           
+      <div class="row">
+        <div class="col">
+          <h2>Lazer e Bem-Estar</h2>
+          <h3>Piscinas</h3>
 
-          </div>
+          <p>Relaxe e aproveite nossas piscina climatizadas, com vista panorâmica para o mar!</p>
+          <p>3 piscinas incrivéis para você e sua família relaxar</p>
 
-          <div class="col-md-6">
-            <h3>Academia</h3>
-            <p>Mantenha sua rotina de exercícios em nossa moderna academia, equipada com os melhores aparelhos.</p>
-            <img src="https://blog.casadofitness.com.br/wp-content/uploads/2022/12/BENEFICIOS-DE-TER-UMA-ACADEMIA-EM-UM-HOTEL-URBANO%E2%80%8B.jpg" alt="Academia do Hotel Estrela do Mar" class="img-fluid">
-          </div>
         </div>
-      
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Spa</h3>
-            <p>Experimente nossos tratamentos de spa, com massagens relaxantes e terapias de beleza.</p>
-            <img src="https://vejasp.abril.com.br/wp-content/uploads/2016/12/032_hotel-unique_-spa-room.jpg?quality=70&strip=all" alt="Spa do Hotel Estrela do Mar" class="img-fluid">
-          </div>
+      </div>
 
-          <div class="col-md-6">
-            <h3>Sauna</h3>
-            <p>Desfrute de momentos de tranquilidade em nossa sauna seca e úmida.</p>
-            <img src="https://thumbs.dreamstime.com/b/seque-sauna-finlandesa-com-forno-dobro-e-grande-janela-panor%C3%A2mico-109121013.jpg" alt="Sauna do Hotel Estrela do Mar" class="img-fluid">
-          </div>
+      <div class="row">
+        <div class="col">
+          <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/serhsnatalgh17.5247b546.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+        <div class="col">
+          <img src="https://images.neobookings.com/1920x1080/cms/hoteltorredelmar.com/section/piscina-infinity-exterior-en-forma-de-playa/pics/piscina-infinity-exterior-en-forma-de-playa-lem6rjr4gn.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
         </div>
 
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Quadras</h3>
-            <p>Aproveite nossas quadras para uma partida amistosa com amigos!</p>
-            <img  src="https://s2.glbimg.com/kmNAAvXAmYAbpv2bK3C2HWxGOwo=/top/i.glbimg.com/og/ig/infoglobo1/f/original/2016/09/05/quadra_2012_04.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+        <div class="col">
+          <img src="https://www.piscine-verona.it/wp-content/uploads/2018/07/piscina-hotel.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+      </div>
 
-            <img src="https://midias.correiobraziliense.com.br/_midias/jpg/2023/07/12/675x450/1_mj1207_02-28495127.jpg?20230712231512?20230712231512" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+      <div class="row">
+        <div class="col">
+          <h3>Academia</h3>
+          <p>Mantenha sua rotina de exercícios em nossa moderna academia, equipada com os melhores aparelhos.</p>
+        </div>
+      </div>
 
-            <img src="https://www.castelopalacehotel.com.br/uploads/20141008133820.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
-            
-            <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/t-quadra-poliespotiva604.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+      <div class="row">
+        <div class="col">
+          <img src="https://blog.casadofitness.com.br/wp-content/uploads/2022/12/BENEFICIOS-DE-TER-UMA-ACADEMIA-EM-UM-HOTEL-URBANO%E2%80%8B.jpg" alt="Academia do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+      </div>
 
-          </div>
+      <div class="row">
+        <div class="col">
+          <h3>Spa</h3>
+          <p>Experimente nossos tratamentos de spa, com massagens relaxantes e terapias de beleza.</p>
+          <img src="https://vejasp.abril.com.br/wp-content/uploads/2016/12/032_hotel-unique_-spa-room.jpg?quality=70&strip=all" alt="Spa do Hotel Estrela do Mar" class="img-fluid">
         </div>
 
-      </section>
+        <div class="col">
+          <h3>Sauna</h3>
+          <p>Desfrute de momentos de tranquilidade em nossa sauna seca e úmida.</p>
+          <img src="https://thumbs.dreamstime.com/b/seque-sauna-finlandesa-com-forno-dobro-e-grande-janela-panor%C3%A2mico-109121013.jpg" alt="Sauna do Hotel Estrela do Mar" class="img-fluid">
 
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="col">
+          <h3>Quadras</h3>
+          <p>Aproveite nossas quadras para uma partida amistosa com amigos!</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <img  src="https://s2.glbimg.com/kmNAAvXAmYAbpv2bK3C2HWxGOwo=/top/i.glbimg.com/og/ig/infoglobo1/f/original/2016/09/05/quadra_2012_04.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+
+        <div class="col">
+          <img src="https://midias.correiobraziliense.com.br/_midias/jpg/2023/07/12/675x450/1_mj1207_02-28495127.jpg?20230712231512?20230712231512" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row">
+        <p></p>
+        <div class="col">
+          <img src="https://www.castelopalacehotel.com.br/uploads/20141008133820.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+
+        <div class="col">
+          <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/t-quadra-poliespotiva604.jpg" alt="Quadras do Hotel Estrela do Mar" class="img-fluid">
+        </div>
+      </div>
+
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
