--- a/Django/projeto_hotel/templates/lazerbemestar.html
+++ b/Django/projeto_hotel/templates/lazerbemestar.html
@@ -68,14 +68,14 @@
 
       <div class="row">
         <div class="col">
-          <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/serhsnatalgh17.5247b546.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
+          <img src="https://www.serhsnatalgrandhotel.com/content/imgsxml/galerias/panel_gallery/1/serhsnatalgh17.5247b546.jpg" alt="Piscina do Hotel Estrela do Mar"  width="400px" height="400px">
         </div>
         <div class="col">
-          <img src="https://images.neobookings.com/1920x1080/cms/hoteltorredelmar.com/section/piscina-infinity-exterior-en-forma-de-playa/pics/piscina-infinity-exterior-en-forma-de-playa-lem6rjr4gn.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
+          <img src="https://images.neobookings.com/1920x1080/cms/hoteltorredelmar.com/section/piscina-infinity-exterior-en-forma-de-playa/pics/piscina-infinity-exterior-en-forma-de-playa-lem6rjr4gn.jpg" alt="Piscina do Hotel Estrela do Mar" width="400px" height="400px">
         </div>
 
         <div class="col">
-          <img src="https://www.piscine-verona.it/wp-content/uploads/2018/07/piscina-hotel.jpg" alt="Piscina do Hotel Estrela do Mar" class="img-fluid">
+          <img src="https://www.piscine-verona.it/wp-content/uploads/2018/07/piscina-hotel.jpg" alt="Piscina do Hotel Estrela do Mar"  width="400px" height="400px">
         </div>
       </div>
 
