--- a/Django/projeto_hotel/templates/cadastro.html
+++ b/Django/projeto_hotel/templates/cadastro.html
@@ -6,50 +6,158 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="container">
+<style>
+  body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      
+  }
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/home"><b>Hotel Estrela Mar</b></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/home">Início</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/lazerbemestar">Lazer e Bem-Estar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/aluguelcarro">Aluguel de Carro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/feedback">Contato e Feedbacks</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="procurar">
-              <input class="form-control me-2" type="procurar" placeholder="Procurar" aria-label="Procurar">
-              <button class="btn btn-outline-success" type="submit">Procurar</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+  .container {
+      max-width: 1000px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  h1 {
+      text-align: center;
+      color: rgb(177, 45, 45);
+  }
+
+  label {
+      display: block;
+      margin: 10px 0 5px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="tel"],
+  input[type="date"],
+
+  select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+  }
+  input[type="submit"] {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 4px;
+  }
+  
+</style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/home"><b>Hotel Estrela do Mar</b></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+         
+          
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
+          </li>
+          
+        
+      </div>
+    </div>
+  </nav>
+<div class="container">
+<h1>Cadastro</h1>
+<form action="/cadastrar" method="post">
+
+  <label for="nome">Nome Completo</label>
+  <input type="text" id="nome" name="nome" required>
+
+  <label for="nome">E-mail</label>
+  <input type="text" id="email" name="email" required>
+
+  <label for="nome">Senha</label>
+  <input type="text" id="senha" name="senha" required>
+
+  <label for="nome">Confirme a Senha</label>
+  <input type="text" id="confirme" name="confirme" required>
+
+  <label for="telefone">Telefone</label>
+  <input type="tel" id="telefone" name="telefone" required>
+
+  <label for="endereco">Endereço</label>
+  <input type="text" id="endereco" name="endereco" required>
+
+  <label for="endereco">Cidade</label>
+  <input type="text" id="cidade" name="cidade" required>
+
+  <label for="tipo">Estado</label>
+  <select id="tipo" name="tipo" required>
+  <option selected>Escolher...</option>
+  <option>Acre</option>
+  <option>Alagoas</option>
+  <option>Amapá</option>
+  <option>Amazonas</option>
+  <option>Bahia</option>
+  <option>Ceará</option>
+  <option>Distrito Federal</option>
+  <option>Espírito Santo</option>
+  <option>Goiás</option>
+  <option>Maranhão</option>
+  <option>Mato Grosso</option>
+  <option>Mato Grosso do Sul</option>
+  <option>Minas Gerais</option>
+  <option>Pará</option>
+  <option>Paraíba</option>
+  <option>Paraná</option>
+  <option>Pernambuco</option>
+  <option>Piauí</option>
+  <option>Rio de Janeiro</option>
+  <option>Rio Grande do Norte</option>
+  <option>Rio Grande do Sul</option>
+  <option>Rondônia</option>
+  <option>Roraima</option>
+  <option>Santa Catarina</option>
+  <option>São Paulo</option>
+  <option>Sergipe</option>
+  <option>Tocantins</option>
+
+</select>
+
+<label for="tipo">Tipo documento</label>
+<select id="tipo" name="tipo" required>
+<option selected>Tipo documento</option>
+<option>CPF</option>
+<option>RG</option>
+<option>CN</option>
+<option>PASSAPORTE</option>
+<option>CIE</option>
+<option>CI</option>
+<option>DNI</option>
+</select>
+
+  <label for="data">Check-in</label>
+  <input type="date" id="data" name="data" required>
+
+  <label for="data">Check-out</label>
+  <input type="date" id="data" name="data" required>
+
+  <button type="button" class="btn btn-outline-danger">Voltar</button>
+  <button type="button" class="btn btn-outline-success">Reservar</button>
+
+</form>
+</div>
+
+    
 
     
 
