--- a/Django/projeto_hotel/templates/home.html
+++ b/Django/projeto_hotel/templates/home.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body class="container">
+<body>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/home"><b>Hotel Estrela Mar</b></a>
+          <a class="navbar-brand" href="/home"><b>Hotel Estrela do Mar</b></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,43 +25,38 @@
               <li class="nav-item">
                 <a class="nav-link" href="/aluguelcarro">Aluguel de Carro</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/feedback">Contato e Feedbacks</a>
-              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="/feedback">Tem alguma dúvida? Fale conosco!</a></li>
                 </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true"> &#11088;&#65039; &#11088; &#65039;&#11088;&#65039;&#11088;&#65039; &#11088;&#65039;</a>
               </li>
+              <a href="/cadastro" class="btn btn-outline-primary">Faça sua Reserva!</a>
             </ul>
-            <form class="d-flex" role="procurar">
-              <input class="form-control me-2" type="procurar" placeholder="Procurar" aria-label="Procurar">
-              <button class="btn btn-outline-success" type="submit">Procurar</button>
-            </form>
+            
           </div>
         </div>
       </nav>
 
+    <main>
+
       <h3>Conheça Hotel Estrela do Mar</h3>
 
-      <p>O Hotel Estrela do Mar é um estabelecimento de hospitalidade moderno e acolhedor, localizado em uma região privilegiada da cidade de <a href="https://www.ilhabela.sp.gov.br/" target="_blank"><b>Ilhabela - SP</b></a>. Projetado com atenção aos detalhes, o hotel oferece acomodações espaçosas e bem equipadas, além de uma ampla infraestrutura de serviços e facilidades, como restaurante, academia, piscina e spa. Essa combinação de conforto e comodidades visa proporcionar aos hóspedes uma experiência única e memorável durante sua estadia. </p>
+      <p>O <b>Hotel Estrela do Mar</b> é um estabelecimento de hospitalidade moderno e acolhedor, localizado em uma região privilegiada da cidade de <a href="https://www.ilhabela.sp.gov.br/" target="_blank"><b>Ilhabela - SP</b></a>. Projetado com atenção aos detalhes, o hotel oferece acomodações espaçosas e bem equipadas, além de uma ampla infraestrutura de serviços e facilidades, como restaurante, academia, piscina e spa. Essa combinação de conforto e comodidades visa proporcionar aos hóspedes uma experiência única e memorável durante sua estadia. </p>
 
       <p>A equipe altamente treinada do Hotel Estrela do Mar está comprometida em atender aos hóspedes com excelência, desde o check-in até o check-out. Com uma política de atendimento personalizado e foco na satisfação dos clientes, o hotel se destaca como uma opção confiável e acolhedora para viajantes a lazer e a negócios que buscam uma estadia excepcional.
-      <b>Faça sua reserva!</b>
+      <a href="/cadastro"><b>Faça sua reserva!</b></a>
       </p>
 
       <img src="https://th.bing.com/th/id/R.98796dec8446fdfd4f4dc3538a734989?rik=DWcPcl90oPepTg&riu=http%3a%2f%2fbestlocationhotels.com%2fwp-content%2fuploads%2f2020%2f04%2fPalace-Praia-Hotel.jpg&ehk=TWmY48ZNeFUr9tsWpnO2Mr0g%2bm952g%2b72FuLeREl3GM%3d&risl=&pid=ImgRaw&r=0" alt="">
 
-      <footer>
+    </main>
+      <footer class="p-4 bg-dark text-light text-center">
         <p>Copyright © 2024 Hotel Estrela do Mar . Todos os direitos reservados.</p>
       </footer>
 
