--- a/Django/projeto_hotel/templates/cadastro.html
+++ b/Django/projeto_hotel/templates/cadastro.html
@@ -152,7 +152,7 @@
   <input type="date" id="data" name="data" required>
 
   <button type="button" class="btn btn-outline-danger">Voltar</button>
-  <button type="button" class="btn btn-outline-success">Reservar</button>
+  <button type="submit" class="btn btn-outline-success">Reservar</button>
 
 </form>
 </div>
